Alterações na API e implementação de DataTable com Primefaces

--- a/frontend/medical-clinic/package.json
+++ b/frontend/medical-clinic/package.json
@@ -16,6 +16,8 @@
     "flowbite": "^1.5.2",
     "mosha-vue-toastify": "^1.0.23",
     "normalize.css": "^8.0.1",
+    "primeicons": "^5.0.0",
+    "primevue": "^3.16.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
